--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "vue": "^3.4.15"
+    "vue": "^3.4.15",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.41.1",
