--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,7 +17,7 @@ jobs:
           with:
             node-version: 18
         - name: Install dependencies
-          run: npm ci
+          run: npm install
         - name: Build
           run: npm run build-only
         - name: Install Playwright Browsers
