added deployment settings

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,15 +22,31 @@ jobs:
         - name: Build
           run: npm run build
 
-        - name: Install Playwright Browsers
-          run: npx playwright install --with-deps
+#        - name: Install Playwright Browsers
+#          run: npx playwright install --with-deps
+#
+#        - name: Run Playwright tests
+#          run: npx playwright test
+#
+#        - uses: actions/upload-artifact@v3
+#          if: always()
+#          with:
+#            name: playwright-report
+#            path: playwright-report/
+#            retention-days: 30
+  deploy:
+    needs: build-and-test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
 
-        - name: Run Playwright tests
-          run: npx playwright test
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '18'
 
-        - uses: actions/upload-artifact@v3
-          if: always()
-          with:
-            name: playwright-report
-            path: playwright-report/
-            retention-days: 30
+      - name: Install gh-pages
+        run: npm install -g gh-pages
+
+      - name: Deploy
+        run: npm run deploy
